--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse ">
   <a [routerLink]="['/home']" class="navbar-brand">{{title}}</a>
 
-  <ul class="nav navbar-nav" *ngIf="!identity">
+  <ul class="nav navbar-nav" >
     <li class="nav-item">
       <a class="nav-link" [routerLink]="['en/hotels']" [routerLinkActive]="['active']" >English</a>
     </li>
